--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #ffeaa7;
+    background-color: #02fafa;
     min-height: 70vh;
     padding: 1rem;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: hsl(198, 1%, 29%);
+    color: white;
     font-family: "Architects Daughter", cursive;
     text-align: center;
     font-size: 130%;
@@ -36,7 +36,7 @@ body {
     transform: rotate(2deg);
     padding: 0.2rem 1.2rem;
     border-radius: 20% 5% 20% 5%/5% 20% 25% 20%;
-    background-color: #fdcb6e;
+    background-color: #02fafa;
     font-size: 1.5rem;
   }
   
@@ -47,7 +47,7 @@ body {
     border-bottom-right-radius: 15px 3px;
     border-bottom-left-radius: 3px 15px;
     border: solid 3px transparent;
-    border-bottom: dashed 3px #fdcb6e;
+    border-bottom: dashed 3px #02fafa;
     font-family: "Architects Daughter", cursive;
     font-size: 1rem;
     color: hsla(260, 2%, 25%, 0.7);
