--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -65,16 +65,22 @@ body {
     background-color: #ffeaa7;
   }
   button span {
-    background: #f1f5f8;
+    background: #02fafa;
     display: block;
     padding: 0.5rem 1rem;
     border-radius: 5px;
     border: 2px solid hsl(198, 1%, 29%);
+  }
+
+  button span:hover{
+    background: #02faa7;
+    transition: .5s;
   }
   
   li {
     text-align: left;
     position: relative;
     padding: 0.5rem;
+    color: black;
   }
   
